CXBOX-929 Delete no Active Roles